--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -154,30 +154,6 @@
             </div>
             <div class="form-group row">
                 <label for="date"
-                       class="col-sm-2 col-form-label col-form-label">Study
-                    Reference</label>
-                <div class="col-sm-10">
-                    <input type="text" name="study_reference"
-                           class="form-control form-control-sm"
-                           placeholder="">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="date"
-                       class="col-sm-2 col-form-label col-form-label">Reference
-                    Category</label>
-                <div class="col-sm-10">
-                    <select class="form-control"
-                            name="reference_category">
-                        <option value=""> Not specified</option>
-                        {% for category in reference_category %}
-                            <option value="{{ category.name }}"> {{ category.name }} </option>
-                        {% endfor %}
-                    </select>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="date"
                        class="col-sm-2 col-form-label col-form-label">Biotope</label>
                 <div class="col-sm-10">
                     <select class="form-control"
@@ -287,7 +263,7 @@
                         Confirm Submit
                     </div>
                     <div class="modal-body">
-                        Are you sure you want to submit the Fish form?
+                        Are you sure you want to submit the Fish form and go to the next form?
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default"
