--- a/bims/templates/non_validated_list.html
+++ b/bims/templates/non_validated_list.html
@@ -17,8 +17,9 @@
 
 {% block body_content %}
 <div style="min-height: 100%; height: auto;">
-    <div class="container" style="text-align: center; margin-top: 25px; margin-bottom: 25px">
-        <h1 class="title-heading">NONVALIDATED BIODIVERSITY RECORDS</h1>
+    <div class="container header-wrapper">
+        Update Biodiversity Record
+        <hr/>
     </div>
     <div class="container" style="margin-bottom: 15px">
         <div class="filter"> <span>Filter by</span>
@@ -37,7 +38,7 @@
     <div class="container">
     <div class="row">
     <div class="col-lg-7">
-    <table>
+    <table class="table table-striped">
         <tr>
             <th>Original Species Name</th>
             <th>Category</th>
