--- a/bims/templates/non_validated_user_list.html
+++ b/bims/templates/non_validated_user_list.html
@@ -18,8 +18,9 @@
 {% block body_content %}
 <div style="min-height: 100%; height: auto;">
     <div id="message-success" style="display: none; float: left; width: 100%; height: 50px"></div>
-    <div class="container" style="text-align: center; margin-top: 25px; margin-bottom: 25px">
-        <h1 class="title-heading">NONVALIDATED BIODIVERSITY RECORDS</h1>
+    <div class="container header-wrapper">
+        Update Biodiversity Record
+        <hr/>
     </div>
     <div class="container" style="margin-bottom: 15px">
         <div class="filter"> <span>Filter by</span>
@@ -37,7 +38,7 @@
     <div class="container">
     <div class="row">
     <div class="col-lg-7">
-    <table>
+    <table class="table table-striped">
         <tr>
             <th>Original Species Name</th>
             <th>Category</th>
@@ -53,7 +54,7 @@
                 {% else %}
                     <td><a>{{ obj.original_species_name }}</a></td>
                 {% endif %}
-                <td>{{ obj.category }}</td>
+                <td>{% if obj.category == 'indigenous' %}Native{% else %}Non-Native{% endif %}</td>
                 <td>{{ obj.collection_date }}</td>
                 <td>{{ obj.owner }}</td>
                 <td class="edit-action"><a href="{% url 'update-records' obj.pk %}" class="btn btn-default" data-toggle="tooltip" title="Edit this object"><i class="fa fa-pencil"></i></a></td>
