Update search by reference

--- a/bims/templates/non_validated_list.html
+++ b/bims/templates/non_validated_list.html
@@ -18,7 +18,7 @@
 {% block body_content %}
 <div style="min-height: 100%; height: auto;">
     <div class="container header-wrapper">
-        Update Biodiversity Record
+        Validate Biodiversity Record
         <hr/>
     </div>
     <div class="container" style="margin-bottom: 15px">
