--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -228,10 +228,12 @@
                 </div>
             </div>
             <div class="row filter-study-reference-row" style="display: none">
-                 <select data-placeholder="Choose a reference..."
+                <div class="chosen-wrapper">
+                    <select data-placeholder="Choose a reference..."
                         id="filter-study-reference"
                         multiple>
-                </select>
+                    </select>
+                </div>
                 <div class="button-filter-wrapper">
                     <button class="apply-filter"><i class="fa fa-check" aria-hidden="true"></i> Apply</button>
                     <button class="clear-filter"><i class="fa fa-times" aria-hidden="true"></i> Clear</button>
@@ -248,10 +250,12 @@
                 </div>
             </div>
             <div class="row filter-collectors-row" style="display: none">
-                <select data-placeholder="Choose a collector/assessor..."
+                <div class="chosen-wrapper">
+                    <select data-placeholder="Choose a collector/assessor..."
                         id="filter-collectors"
                         multiple>
-                </select>
+                    </select>
+                </div>
                 <div class="button-filter-wrapper">
                     <button class="apply-filter"><i class="fa fa-check" aria-hidden="true"></i> Apply</button>
                     <button class="clear-filter"><i class="fa fa-times" aria-hidden="true"></i> Clear</button>
