--- a/bims/templates/source_references/source_reference_page.html
+++ b/bims/templates/source_references/source_reference_page.html
@@ -135,7 +135,7 @@
                             <tr>
                                 <td>
                                     <input id="doi-input" type="text" class="form-control form-control-sm"
-                                           placeholder="Insert the DOI in this format: 10.1007/s11230-017-9737, and then click the button to generate the study reference.">
+                                           placeholder="Insert the DOI in this format: 10.1007/s11230-017-9737, and then click the search button to generate the study reference.">
                                 </td>
                                 <td style="width: 46px;">
                                     <button id="fetch-doi-button" type="button" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i></button>
