Fix selenium test

--- a/bims/templates/404.html
+++ b/bims/templates/404.html
@@ -33,7 +33,7 @@
 <body>
 <div class="container">
 
-<h1>404 - PAGE NOT FOUND</h1>
+<h1 id="error-title">404 - PAGE NOT FOUND</h1>
 <h4>
     Sorry but the page you are looking for does not exists, have been removed, name changed or is temporarily unavailable
 </h4>
