Update owner in fish form

--- a/bims/templates/500.html
+++ b/bims/templates/500.html
@@ -33,7 +33,7 @@
 <body>
 <div class="container">
 
-<h1>500 - SERVER ERROR</h1>
+<h1 id="error-title">500 - SERVER ERROR</h1>
 <h4>
     We're unable to fulfill your request. Rest assured we have been notified and are looking into the issue.
     If the error continues, please file an issue in <a href="http://github.com/kartoza/django-bims/issues"> Github's</a> issue tracker.</a>
