--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -143,7 +143,7 @@
                 <label for="date"
                        class="col-sm-2 col-form-label col-form-label required-text">Owner</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control form-control-sm"
+                    <input type="text" class="form-control form-control-sm" onClick="this.setSelectionRange(0, this.value.length)"
                            id="owner" placeholder="" name="owner" value="{% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user.username }}{%endif%}"
                            required>
                     <div class="invalid-feedback">
