--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -160,7 +160,7 @@
                        class="col-sm-2 col-form-label col-form-label">Owner
                     </label>
                 <div class="col-sm-10">
-                    <input type="text"
+                    <input type="text" onClick="this.setSelectionRange(0, this.value.length)"
                            class="form-control form-control-sm"
                            placeholder="" value="{{ fullname }}" id="owner" {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %} >
                     <input type="hidden" name="owner" id="owner_id" value="{{ user_id }}">
