--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -141,15 +141,15 @@
             </div>
             <div class="form-group row even-row">
                 <label for="date"
-                       class="col-sm-2 col-form-label col-form-label required-text">Collector</label>
+                       class="col-sm-2 col-form-label col-form-label required-text">Owner</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control form-control-sm"
-                           id="collector" placeholder="" name="collector" value="{% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user.username }}{%endif%}"
+                    <input type="text" class="form-control form-control-sm" onClick="this.setSelectionRange(0, this.value.length)"
+                           id="owner" placeholder="" name="owner" value="{% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user.username }}{%endif%}"
                            required>
                     <div class="invalid-feedback">
-                        Please provide a collector
+                        Please provide a owner
                     </div>
-                    <input type="hidden" name="collector_id" id="collector_id" value="{{ user.id }}">
+                    <input type="hidden" name="owner_id" id="owner_id" value="{{ user.id }}">
                 </div>
             </div>
             <div class="form-group row">
