Update metadata table for single site sass dashbord

--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -205,3 +205,7 @@ body {
     color: grey;
     font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+.data-content {
+    line-height: 22px;
+}
