--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -70,7 +70,7 @@
                 <div class="vertical-space"></div>
                 <div class="table-container ajax-container">
                     <div class="table-title">
-                        Data Sources
+                        Metadata Table
                     </div>
                     <div class="data-content">
                         <ul id="data-source-list"></ul>
