--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -74,6 +74,21 @@
                             </div>
                         </div>
                     </div>
+                    {#  Metadata table #}
+                    <div class="row">
+                        <div class="col-lg-12" id="sdd-metadata-table-list">
+                            <div class="card">
+                                <div class="card-header">
+                                    <div class="card-header-title pull-left d-inline">
+                                        Metadata Table
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <ul id="metadata-table-list-taxon"></ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-8 dashboard-graph-wrapper">
                     <div class="row">
@@ -418,6 +433,19 @@
                                     style="width: 100%;">Download as CSV
                             </button>
                         </div>
+                    </div>
+                </div>
+
+                {# Metadata table #}
+                <div class="card" id="ssdd-metadata-table">
+                    <div class="card-header">
+                        <div class="card-header-title pull-left d-inline">
+                            Metadata Table
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <ul id="metadata-table-list">
+                        </ul>
                     </div>
                 </div>
 
