Add document source field in document

--- a/bims/templates/source_references/new_document_modal.html
+++ b/bims/templates/source_references/new_document_modal.html
@@ -37,6 +37,16 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label for="document-source"
+                               class="col-sm-2 col-form-label col-form-label">Source</label>
+                        <div class="col-sm-10">
+                            <input id="document-source" type="text" class="form-control form-control-sm" name="document_source" maxlength="512">
+                            <small class="form-text text-muted">
+                                E.g. Water Research Commission Report
+                            </small>
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label for="document-title"
                                class="col-sm-2 col-form-label col-form-label"><b>Title</b></label>
                         <div class="col-sm-10">
