--- a/bims/templates/upload/layer_upload.html
+++ b/bims/templates/upload/layer_upload.html
@@ -4,7 +4,7 @@
 
 {% block title %} {% trans "Upload Layer"  %} - {{ block.super }}  {% endblock %}
 
-{% block body_class %}layers upload{% endblock %}
+{% block body_class %}{% trans "layers upload" %}{% endblock %}
 
 
 {% block head %}
@@ -86,7 +86,7 @@
       <h4>{% trans "Files to be uploaded" %}</h4>
       <div id="file-queue"></div>
       <div class="checkbox" style="display:none;" id="metadata_uploaded_preserve_check">
-          Preserve Metadata XML <input type="checkbox" name="metadata_uploaded_preserve" id="id_metadata_uploaded_preserve"/>
+          {% trans "Preserve Metadata XML" %} <input type="checkbox" name="metadata_uploaded_preserve" id="id_metadata_uploaded_preserve"/>
       </div>
     </section>
 
@@ -116,16 +116,14 @@
       {% include "_permissions.html" %}
     </form>
   </div>
-  {% endif %}"
+  {% endif %}
 </div>
 {% endblock %}
 
 
-
 {% block extra_script %}
 {{ block.super }}
-<!-- Fix pipeline error -->
-<script data-main="{{ STATIC_URL }}geonode/js/upload/main"
+<script data-main="/static/geonode/js/upload/main"
   src="{% static 'lib/js/require.js' %}">
 </script>
 <script type="text/javascript">
@@ -133,7 +131,6 @@
 
   csrf_token =  "{{ csrf_token }}",
   form_target = "{{ UPLOADER_URL }}",
-  geogig_enabled = {{ GEOGIG_ENABLED|lower  }},
   time_enabled = {{ TIME_ENABLED|lower  }},
   mosaic_enabled = {{ MOSAIC_ENABLED|lower  }},
   userLookup = "{% url "account_ajax_lookup" %}"
