--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -333,35 +333,39 @@
                     {# Overview Site details #}
                     <div class="card-body" id="ssdd-overview-wrapper">
                         <div id="fish-ssdd-site-details">
+                            <div class="col-12 sub-title site-details-header">
+                                Site Details
+                            </div>
                             <div class="col-12"
                                  id="overview"></div>
+                            <div class="col-12 sub-title site-details-header">
+                                River and Geomorphological Zone
+                            </div>
+                            <div class="col-12"
+                                 id="river_and_geomorphological"></div>
                             <div class="col-12 sub-title site-details-header">
                                 Catchments
                             </div>
                             <div class="col-12"
                                  id="catchments"></div>
-                            <div class="col-12 sub-title"
-                                 class="site-details-header">
-                                Water Management Areas
+                            <div class="col-12 sub-title site-details-header">
+                                Management Areas
                             </div>
                             <div class="col-12"
                                  id="sub_water_management_areas"></div>
-                            <div class="col-12 sub-title"
-                                 class="site-details-header">
-                                SA Ecoregion
+                            <div class="col-12 sub-title site-details-header">
+                                Ecoregion and Province
                             </div>
                             <div class="col-12"
                                  id="sa-ecoregions"></div>
                         </div>
-                        <br/>
                         <div id="fish-ssdd-records-sites">
                             <div class="col-12 sub-title site-details-header">
-                                Records and Sites
+                                Species and Occurences
                             </div>
                             <div class="col-12" id="records-sites">
                             </div>
                         </div>
-                        <br/>
                         <div class="occurrences-table-view">
                             <div class="col-12">
                                 <div class="row">
@@ -369,8 +373,7 @@
                                         Origin
                                     </div>
                                     <div class="col-6 sub-title site-details-header">
-                                        Number of occurrence
-                                        records
+                                        Occurrences
                                     </div>
                                     <div class="col-12"
                                          id="origins">
@@ -378,7 +381,6 @@
                                 </div>
                             </div>
                         </div>
-                        <br/>
                         <div class="occurrences-table-view">
                             <div class="col-12">
                                 <div class="row">
@@ -386,8 +388,7 @@
                                         Endemism
                                     </div>
                                     <div class="col-6 sub-title site-details-header">
-                                        Number of occurrence
-                                        records
+                                        Occurrences
                                     </div>
                                     <div class="col-12"
                                          id="ssdd-endemism">
@@ -395,7 +396,6 @@
                                 </div>
                             </div>
                         </div>
-                        <br/>
                         <div class="occurrences-table-view">
                             <div class="col-12">
                                 <div class="row">
@@ -403,8 +403,7 @@
                                         Conservation Status
                                     </div>
                                     <div class="col-6 sub-title site-details-header">
-                                        Number of occurrence
-                                        records
+                                        Occurrences
                                     </div>
                                     <div class="col-12"
                                          id="ssdd-conservation-status">
