add close button

--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -271,6 +271,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="{% static "js/libs/jquery.timepicker.min.js" %}"></script>
+    <script src="{% static "js/sass_form.js" %}"></script>
     <script type="text/javascript">
         $(':radio:not(:checked)').attr('disabled', true);
     </script>
