--- a/sass/static/css/form_page.css
+++ b/sass/static/css/form_page.css
@@ -112,6 +112,10 @@ td.sampled-name {
 
 .sass-form-close-container {
     margin-bottom: 43px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10000;
 }
 
 .sass-form-close {
