--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -18,10 +18,6 @@
 {% endblock %}
 
 {% block body_content %}
-    <div class="sass-form-close-container">
-        <div class="sass-form-close"><i class="fa fa-times" aria-hidden="true"></i></div>
-    </div>
-
     <form action="{{ request.path }}" method="post" id="sass-form">
     {% csrf_token %}
     <div class="body-form container">
@@ -37,7 +33,10 @@
         {% else %}
             <h2>Add SASS record</h2>
         {% endif %}
-        <div class="site-code pull-right">
+        <div class="site-code pull-right view-only">
+            <div class="sass-form-close-container">
+                <div class="sass-form-close"><i class="fa fa-times" aria-hidden="true"></i></div>
+            </div>
             Site code/name : {{ site_code }}
         </div>
         <div class="row">
