--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -73,7 +73,7 @@
                         Metadata Table
                     </div>
                     <div class="data-content">
-                        <ul id="data-source-list"></ul>
+                        <table id="data-source-list" class="table table-hover custom-table"></table>
                     </div>
                 </div>
             </div>
