--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -605,6 +605,19 @@
                     </div>
                 </div>
 
+                {# chemical records bar chart #}
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-header-title pull-left d-inbar">
+                            Chemical Records
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="col-12 fish-ssdd-chem-bar-chart" id="fish-ssdd-chem-bar-chart">
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
