Hide chem chart for multiple sites

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -606,7 +606,7 @@
                 </div>
 
                 {# chemical records bar chart #}
-                <div class="card">
+                <div class="card" id="ssdd-chem-chart-wrapper">
                     <div class="card-header">
                         <div class="card-header-title pull-left d-inbar">
                             Chemical Records
